--- a/miniconda3/Dockerfile
+++ b/miniconda3/Dockerfile
@@ -3,3 +3,5 @@ FROM debian
 LABEL maintainer=@michalpropas
 
 ARG DEBIAN_FRONTEND=noninteractive
+
+RUN apt-get update --fix-missing && apt-get install -y wget bzip2 ca-certificates libglib2.0-0 libxext6 libxrender1
